<resources>
    <string name="app_name">CvBuilderApp</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="personal_details">Personal Details</string>
    <string name="summary">Summary</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="certifications">Certifications</string>
    <string name="references">References</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
    <string name="instituion_name">Instituion Name</string>
    <string name="score">Score</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="summary_label">Summary</string>
    <string name="enter_summary">Enter Summary</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="company">Company</string>
    <string name="to_date">To Date</string>
    <string name="select_from_date">Select From Date</string>
    <string name="from_date">From Date</string>
    <string name="currently_working_here">Currently Working Here</string>
    <string name="select_to_date">Select To Date</string>
    <string name="add_more">Add More</string>
    <string name="remove">Remove</string>
    <string name="certificationsHeading">Certifications</string>
    <string name="certDetails">Details</string>
    <string name="image_preview">Image Preview</string>
    <string name="cv_preview">Cv Preview</string>
    <string name="cvshare">cvShare</string>
    <string name="cvShare">Share</string>
</resources>