<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonalDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2E364D"
        >

        <ImageView
            android:id="@+id/personalSectionLogo"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_name"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_marginTop="-20dp"
            android:id="@+id/tvPersonalLogoText"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/personalSectionLogo"
            android:textSize="35sp"
            android:textAlignment="center"
            />


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@id/tvPersonalLogoText"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginStart="25dp"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tvEmail"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="sans-serif"
            android:background="@drawable/edittext_bg"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@id/etEmail"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginStart="20dp"
            />
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tvName"

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="sans-serif"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            />


        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@id/etName"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tvAddress"

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_address"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="sans-serif"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:layout_below="@id/etAddress"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginStart="20dp"
            />
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tvPhone"

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_phone_number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="sans-serif"
            android:background="@drawable/edittext_bg"
            android:inputType="phone"
            />




        <Button
            android:id="@+id/btnPersonalSave"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/white"
            android:textColor="#2E364D"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"

            />

        <Button
            android:id="@+id/btnPersonalCancel"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/white"
            android:textColor="#2E364D"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/btnPersonalSave"
            android:layout_marginStart="30dp"
            />

    </RelativeLayout>

</LinearLayout>