<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2E364D"
    android:padding="20dp"
    tools:context=".Certifications">

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/certSectionLogo"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvCertLogoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:text="@string/certDetails"/>

            <LinearLayout
                android:id="@+id/certificationsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnAddCert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_more"
                android:backgroundTint="@color/white"
                android:textColor="#2E364D"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/btnRemoveCert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:backgroundTint="@color/white"
                android:textColor="#2E364D"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

    <!-- Buttons always visible at bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnCertSave"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/white"
            android:textColor="#2E364D"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btnCertCancel"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/white"
            android:textColor="#2E364D"/>
    </LinearLayout>

</LinearLayout>
