<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".References">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2E364D">

        <ImageView
            android:id="@+id/refSectionLogo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_name" />

        <TextView
            android:id="@+id/tvRefLogoText"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/refSectionLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvRefDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRefLogoText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/certDetails"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/refContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRefDetails"
            android:layout_marginTop="20dp"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/refContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/btnAddRef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/add_more"
                android:layout_marginEnd="20dp"
                android:textColor="#2E364D" />

            <Button
                android:id="@+id/btnRemoveRef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/remove"
                android:textColor="#2E364D" />

        </LinearLayout>
        
    </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:background="#2E364D"
        >

        <Button
            android:id="@+id/btnRefSave"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/save"
            android:textColor="#2E364D"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/btnRefCancel"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="#2E364D" />

    </LinearLayout>

</LinearLayout>